--- a/hw4/260744353.tex
+++ b/hw4/260744353.tex
@@ -65,11 +65,11 @@
 {}
 
 \author{Simon Zheng\\260744353}
-\title{Homework $0$}
-\date{$MONTH$ $DAY$$^{\textnormal{SUFFIX}}$, $YEAR$}
-\lhead{$COURSE CODE$}
+\title{Homework 4}
+\date{November 18$^{\textnormal{th}}$, 2017}
+\lhead{COMP 251}
 %\chead{Homework $$}
-\rhead{$COURSE NAME$}
+\rhead{Algorithms and Data Structures}
 
 \begin{document}
 	\maketitle
